--- a/cuckoo-csharp/cuckoo-csharp.csproj
+++ b/cuckoo-csharp/cuckoo-csharp.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>cuckoo_csharp</RootNamespace>
+    <StartupObject></StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
