--- a/cuckoo-csharp/cuckoo-csharp.csproj
+++ b/cuckoo-csharp/cuckoo-csharp.csproj
@@ -7,6 +7,13 @@
     <StartupObject></StartupObject>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <ErrorReport>queue</ErrorReport>
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Cryptowatcher.TA-LIb-Core" Version="1.0.0" />
   </ItemGroup>
