add .vscode to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,16 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+.vscode/solution-explorer/enum.cs-template
+.vscode/launch.json
+.vscode/tasks.json
+.vscode/solution-explorer/class.cs-template
+.vscode/solution-explorer/class.ts-template
+.vscode/solution-explorer/class.vb-template
+.vscode/solution-explorer/default.ts-template
+.vscode/solution-explorer/interface.cs-template
+.vscode/solution-explorer/interface.ts-template
+.vscode/solution-explorer/template-list.json
+.vscode/solution-explorer/template-parameters.js
+cuckoo-csharp/BitMEX
+.vscode
