--- a/cuckoo-csharp/cuckoo-csharp.csproj
+++ b/cuckoo-csharp/cuckoo-csharp.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="Cryptowatcher.TA-LIb-Core" Version="1.0.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.0.600" />
   </ItemGroup>
 
   <ItemGroup>
