添加启动参数

--- a/cuckoo-csharp/Properties/launchSettings.json
+++ b/cuckoo-csharp/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "cuckoo-csharp": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "-i 1 -c ./options-default.json"
     }
   }
 }
