添加自动计算止盈张数， 同测试服版本

--- a/cuckoo-csharp/cuckoo-csharp.csproj
+++ b/cuckoo-csharp/cuckoo-csharp.csproj
@@ -54,4 +54,6 @@
     </None>
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties Properties_4launchSettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
