--- a/cuckoo-csharp/cuckoo-csharp.csproj
+++ b/cuckoo-csharp/cuckoo-csharp.csproj
@@ -18,7 +18,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.6.0" />
     <PackageReference Include="Cryptowatcher.TA-LIb-Core" Version="1.0.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
   </ItemGroup>
 
   <ItemGroup>
