--- a/cuckoo-csharp/Properties/launchSettings.json
+++ b/cuckoo-csharp/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "cuckoo-csharp": {
       "commandName": "Project",
-      "commandLineArgs": "-i 2 -c ./options-default.json"
+      "commandLineArgs": "-i 10086 -c ./options-default_Binan.json"
     }
   }
 }
