--- a/cuckoo-csharp/Properties/launchSettings.json
+++ b/cuckoo-csharp/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "cuckoo-csharp": {
       "commandName": "Project",
-      "commandLineArgs": "-i 1008 -c ./options-default.json"
+      "commandLineArgs": "-i 1110 -c ./bitmexusd-1110.json"
     }
   }
 }
