修改检查并刷新仓位数量

--- a/cuckoo-csharp/Properties/launchSettings.json
+++ b/cuckoo-csharp/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "cuckoo-csharp": {
       "commandName": "Project",
-      //"commandLineArgs": "-i 2 -c ./Triangle.json"
+      "commandLineArgs": "-i 2 -c ./Triangle.json"
     }
   }
 }
