--- a/cuckoo-csharp/Properties/launchSettings.json
+++ b/cuckoo-csharp/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "cuckoo-csharp": {
       "commandName": "Project",
-      "commandLineArgs": "-i 9002 -c ./ftx_ethMA.json"
+      "commandLineArgs": "-i 1 -c ./zbg_btc.json"
     }
   }
 }
